# rasflow

./: Cargo.toml  MANUAL_SQLX.md  README.md  agents.md
backend/: .env.example  Cargo.toml  INSTRUCCIONES.md  MANUAL_REDIS.md
backend/.sqlx/: query-4267773c53a0adcccb44985f2b45c1be52ee57b8b563e2f52355a9085d843993.json  query-44fd1fd76d01fd4baf3e4d41bfdb69552cf349b3efdc66d8ba7ea03e8aebc376.json  query-578ceafb412e2c9e7b847044f1ebbed76eda8805a29abab6928ec00ac03117a3.json  query-60207dd3122ccdcbd96ada2bfea40b30007fde6f172adaea41532c70a6c18b0c.json  query-69c94e4bccdf2a62224f86924dc17585b282d09c912abac96aa0bd31931ac338.json  query-77bb0f18e117c0b9a8e605f934aeda6fc2d74254552afab6229e57f4832cb496.json  query-88cb436d7d28928fa85e2b34d17536e7bec0351a1d0f05e0130a44403407fd18.json  query-89e78a58c3d3e7a7d5f858f18ce59da56c8db456a353f7b53dc8f2a4418618da.json  query-a03eb98f6dd9d2b07cd9e88f9b897550aaf675f25d5dd4ec6f2d04b12a94ac36.json  query-b49b0cfe3d659ed5e2103f9559208648b0072a748a60feb5157ab0153461fda1.json  query-bcb53693aba77723e97961fe0012ca6722cdc4831959eb06b2768ec8a1972bf1.json  query-c27389c4aa66a4554b4a92096228e3b08a3e644bcec76307b02deafb3227ff6c.json  query-ced2f155abc7d86a581546ef3f1b7887d0566ebc4bb5cf6f64a48f470309d59d.json  query-d25428222f008147050d838056794b34dcd5f4ba6b5df899737b726ad7938c07.json  query-f55dd43734d62ea3470cfa02e2699946a94c14726c8367ca713d23092924f0da.json
backend/migrations/: 20260202001839_create_users.sql  20260202001849_create_projects.sql  20260202001900_crate_tasks.sql
backend/src/: main.rs
backend/src/cache/: redis.rs
frontend/: index.html  (+3 more)
(+121 files in other folders)
