[package]
name = "taskflow-api"
version = "0.1.0"
edition = "2024"

[dependencies]
home = "=0.5.11"
# Framework Web
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# Base de datos
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros"
] }

# Cache Redis
redis = { version = "0.27", features = ["aio", "tokio-comp", "json"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Autenticación
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.15"

# Utilidades
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dotenvy = "0.15"

# Validación
validator = { version = "0.19", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
